[project]
name = "liteyukibot-automations"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "snowykami", email = "snowykami@outlook.com"},
]
dependencies = [
    "pydantic>=2.9.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
